# bmi323

./: Cargo.toml  README.md
src/: accel.rs  alt.rs  calib.rs  defs.rs  events.rs  fifo.rs  gyro.rs  interrupt.rs  io.rs  lib.rs  offset.rs  rw.rs  selftest.rs  types.rs
src/feature/: any_no_motion.rs  axis_remap.rs  flat.rs  mod.rs  orientation.rs  sig_motion.rs  step.rs  tap.rs  tilt.rs
