[package]
  description = "A Rust driver for the Bosch BMI323 IMU sensor"
  name        = "bmi323"

  authors    = ["Ike Kurghinyan <info@dempfi.com>"]
  categories = ["embedded", "no-std"]
  edition    = "2024"
  keywords   = ["bosch", "no_std", "bmi323"]
  license    = "MIT OR Apache-2.0"
  readme     = "README.md"
  version    = "0.1.0"

[dependencies]
  defmt              = { version = "1.0.1", optional = true }
  embedded-hal-async = "1.0.0"
  heapless           = { version = "0.9.1", optional = true }
  micromath          = { version = "2.1.0", features = ["vector"] }
  packbits           = { version = "0.1.0", path = "../packbits" }

[features]
  default = []
  defmt   = ["dep:defmt"]
  events  = ["dep:heapless"]
