[package]
  authors       = ["Ike Kurghinyan <info@dempfi.com>"]
  categories    = ["embedded", "no-std", "hardware-support"]
  description   = "Async, no_std driver for the Bosch BMI323 6-axis IMU sensor"
  documentation = "https://docs.rs/bmi323-rs"
  edition       = "2021"
  keywords      = ["bosch", "bmi323", "imu", "sensor", "embedded"]
  license       = "MIT OR Apache-2.0"
  name          = "bmi323-rs"
  readme        = "README.md"
  repository    = "https://github.com/dempfi/bmi323"
  version       = "0.1.1"

[lib]
  name = "bmi323"

[dependencies]
  defmt              = { version = "0.3", optional = true }
  embedded-hal-async = "1.0"
  heapless           = { version = "0.8", optional = true }
  micromath          = { version = "2.1", features = ["vector"] }
  packbits           = "0.1"

[features]
  default = []
  defmt   = ["dep:defmt"]
  events  = ["dep:heapless"]
